Revert "Merge branch 'nikitos' into 'dev'"
This reverts commit 2f276f3b437e3b6603a002f47aa92dd46f66cd3a, reversing
changes made to e8eac9e3403504ba79a62dae76a6be91d47f5334.